<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sid.apartmate.RegisterActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
            <EditText
                android:id="@+id/et_reg__firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/register_first_Name"
                />
            <EditText
                android:id="@+id/et_reg__lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/register_last_Name"
                />
            <EditText
                android:id="@+id/et_reg_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/register_email"
                />
            <EditText
                android:id="@+id/et_reg_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="textPassword"
                android:hint="@string/register_password"
                />
            <EditText
                android:id="@+id/et_reg_confirmPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:inputType="textPassword"
                android:hint="@string/register_confirm_Password"
                />

        <Button
            android:id="@+id/bt_register"
            android:ems="8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_register"/>

    </LinearLayout>

</RelativeLayout>
