<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.purdue.raj5.apartmate.LoginActivity">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical">
    <LinearLayout
    android:id="@+id/ll_email"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/prompt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>
    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/prompt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:ems="8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in_short"/>
    <Button
        android:id="@+id/bt_register"
        android:ems="8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_register"/>

</LinearLayout>

</RelativeLayout>
